# fashion-meter-project

./: .gitignore  Dockerfile  Makefile  README.md  benchmark.py  config.py  dataset.py  get-size.py  labels.txt  main.py  model.py  pinterest.py  pipeline.sh  pretraining.ipynb  pyproject.toml  requirements.txt  resize.py  train.py
baseline/: baseline.py  custom_dataset_training.py  pretraining.ipynb
data/processed/: test.csv  train.csv
data/raw/: test-train.py  test.csv  train.csv
fashion_meter_module/: __init__.py  config.py  dataset.py  evaluate.py  features.py  model.py  plots.py
fashion_meter_module/modeling/: benchmark.py  predict.py  train.py
notebooks/: fashion_meter_experiment_pipeline.ipynb  fashion_meter_experiments.ipynb  test.ipynb
setup-dataset/: README.md  back.py  get-size.py  requirements.txt
wandb/: latest-run
wandb/run-20241202_190928-vpsoqdmg/: run-vpsoqdmg.wandb
wandb/run-20241202_190928-vpsoqdmg/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20241202_191221-s1a5lycj/: run-s1a5lycj.wandb
wandb/run-20241202_191221-s1a5lycj/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20241202_192445-ndg7kku6/: run-ndg7kku6.wandb
wandb/run-20241202_192445-ndg7kku6/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20241202_192800-f8vprzs1/: run-f8vprzs1.wandb
wandb/run-20241202_192800-f8vprzs1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
